# Handwritten-Signature-Verifier

./: .env.example  README.md  compose.yaml
app/: .dockerignore  .env.example  Dockerfile  SignatureUploadForm.py  main.py  pyproject.toml
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: api.html  base.html  gui.html  index.html
app/templates/errors/: 404.html  500.html
caddy/: Caddyfile
cedar_dataset/: README.md
datasets/CEDAR/: .gitignore  README.md
datasets/CEDAR/full_forg/: README.md
datasets/CEDAR/full_org/: README.md
docs/: Network-Architecture-and-Port-Forwarding.md
flask/app/: app.py  views.py
flask/app/static/css/: style.css
flask/app/templates/: api.html
src/: Dockerfile  README.md  SiameseNetwork.py  api.py  config.py  data_preprocessing.py  dataset.py  dataset_information.json  main.py  main_copy.py  pyproject.toml  requirements.txt  test.py  train.py  transformations.py  utils.py
